# sillycat-worker

./: .gitignore  Cargo.toml  LICENSE.md  README.md  package-lock.json  package.json  wrangler.toml
src/: index.ts  lib.rs  utils.rs
src/handlers/: generate.ts
