[package]
name = "sillycat-worker"
version = "1.0.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
cfg-if = "1.0.0"
worker = "0.0.12"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }
resvg = "0.26.1"
tiny-skia = "0.8.2"
usvg = "0.26.1"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
