[package]
name = "sillycat-worker"
version = "1.0.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
cfg-if = "1.0.0"
worker = "0.0.12"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }
resvg = "0.27.0"
tiny-skia = "0.8.2"
usvg = "0.27.0"
url = "2.3.1"
rand = "0.8.5"
getrandom = { version = "0.2.8", features = ["js"] }

[profile.release]
strip = true
# Tell `rustc` to optimize for small code size.
opt-level = "s"
codegen-units = 1
